syntax = "proto3";

option java_multiple_files = true;
option java_package = "chatserver.gen";

//////////////////////////////////////聊天模型

message Author {
  int32 type = 1; // 0: 真人，1：AI英语老师, 2：AI女友
  string name = 3;
}

message AudioStream {
  string roomId = 1;
  bytes audio = 4; // 麦克风收录产生
}

message TextStream {
  string text = 4; // asr生成
}

message TextMessage {
  string roomId = 1;
  string text = 3;
}

message TextAudioStream {
  string text = 4;  // chatgpt生成
  bytes audio = 5; // tts生成
}

message Message {
  string roomId = 1;
  Author author = 3;
  int64 createdTime = 4;
  MsgType msgType = 5;
  string text = 6;
  string audioUrl = 7;
  string imageUrl = 8;
  string videoUrl = 9;
}

enum MsgType {
  AUDIO_WITH_TEXT = 0;    // 真人语音聊天
  TEXT_WITH_AUDIO = 1;    // chatgpt回复的
  TEXT = 2;               // 真人打字聊天

  IMAGE = 3;
  VIDEO = 4;
}

message RoomInfo {
  string roomId = 1;
  Author you = 2;  // 先写死，只支持2个人
  Author ai = 3;
}

message Hello {
}

//////////////////////////////////////

service ChatService {
  rpc ListRoom(Hello) returns (stream RoomInfo);
  rpc GetMessageStream(Hello) returns (stream Message);

  rpc SpeechRecognize(stream AudioStream) returns (stream TextStream);
  rpc Chat(TextMessage) returns (stream TextAudioStream);
}